Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99484

Android - QML Camera freezes app

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.5, 6.3.0, 6.4.0 Beta1
    • 6.2.2
    • Multimedia
    • None
    • Android 11.0
      Android NDK 22.1.7171670
    • Android
    • 8bca441b6f (qt/qtbase/dev) 8bca441b6f (qt/tqtc-qtbase/dev) 9554d315aa (qt/qtbase/6.3.0) 9554d315aa (qt/tqtc-qtbase/6.3.0) a32592c37a (qt/qtbase/6.3) 762c1664a9 (qt/qtbase/6.2) 762c1664a9 (qt/tqtc-qtbase/6.2) a32592c37a (qt/tqtc-qtbase/6.3)
    • 2022wk02FOAndroid&Automotive, 2022wk04FOAndroid&Automotive

    Description

      If the android keyboard was opened before the camera queried the permission from the user the app will freeze/crash after the choice was made in the permission dialog.

      The attached example will reproduce the issue:

      1. Start the app
      2. Tap the "Evil TextField" -> Android keyboard shows
      3. Close the keyboard again
      4. Tap the "Start camera" button
      5. Choose the permission always/once only
      6. The app will hang now

      This only happens if the permission is queried and you open the keyboard before that. If you skip 2 + 3 it will just work.

       

      It took me two days to figure out the keybard causes it.

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jakoivik Jarkko Koivikko
              Marscho Marscho
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: